--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.12
   flutter_screenutil: ^5.9.3
   get: ^4.7.2
+  firebase_messaging: ^15.2.10
 
 dev_dependencies:
   flutter_test:
