--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
   firebase_messaging: ^15.2.10
+  image_card: ^0.0.4
 
 dev_dependencies:
   flutter_test:
